dev redis interface and gin router
